--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-toast-message": "^1.4.1",
     "react-native-vector-icons": "^7.0.0",
     "react-native-web": "~0.11.7",
     "react-profile-card": "^0.1.4",
