--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~38.0.8",
     "expo-font": "~8.2.1",
     "expo-status-bar": "^1.0.2",
+    "expo-updates": "^0.4.1",
     "jwt-decode": "^2.2.0",
     "native-base": "^2.13.13",
     "react": "~16.11.0",
@@ -30,7 +31,6 @@
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
-    "react-native-toast-message": "^1.4.1",
     "react-native-vector-icons": "^7.0.0",
     "react-native-web": "~0.11.7",
     "react-profile-card": "^0.1.4",
